--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "0,20,40 18,19,20,21,22,23 * * *" # See https://crontab.guru/#0_7,9,11_*_*_1,3
+  - cron: "0 4 1,7,13,19,25 * *" # See https://crontab.guru/#0_7,9,11_*_*_1,3
 
 jobs:
   auto_commit:
